fix covers sizes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -187,19 +187,19 @@ html, body {
 }
 
 .nes {
-  //height: 290px;
+  height: 290px;
   width: 215px;
   margin: 0 auto;
 }
 
 .gameboy {
-  //height: 240px;
+  height: 240px;
   width: 240px;
   margin: 0 auto;
 }
 
 .snes {
-  //height: 240px;
+  height: 240px;
   width: 340px;
   margin: 0 auto;
 
@@ -210,7 +210,7 @@ html, body {
 }
 
 .nsixtyfour {
-  //height:245px;
+  height:245px;
   width: 350px;
   margin: 0 auto;
 
@@ -221,13 +221,13 @@ html, body {
 }
 
 .gba {
-  //height: 230px;
+  height: 230px;
   width: 230px;
   margin: 0 auto;
 }
 
 .gamecube {
-  //height: 300px;
+  height: 300px;
   width: 215px;
   margin: 0 auto;
 }
